# Parallel-Banded-Solver

./: CMakeLists.txt  README.md
inculde/: banded_matrix.h  cyclic_reduction.h  matrix_io.h  parallel_solver.h  utils.h
src/: banded_matrix.cpp  cyclic_reduction.cpp  main.cpp  matrix_io.cpp  parallel_solver.cpp  utils.cpp
test/: test_banded_matrix.cpp  test_io.cpp  test_solver.cpp
